Fix CSS on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,9 @@
   
   #BigText {
     font-size: 24pt;
-     word-break: anywhere;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-all;
   }
   
   #LittleText {
